<?xml version="1.0"?>
<package>
  <name>lgsvl_msgs</name>
  <version>0.0.2</version>
  <description>The lgsvl_msgs package for ground truth data.</description>
  <author email="david.uhm@lge.com">David Uhm</author>
  <maintainer email="david.uhm@lge.com">David Uhm</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
